WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
30592
[Qt] keepWebHistory undefined while executing Layouttests fast/history/clicked-link-is-visited.html
https://bugs.webkit.org/show_bug.cgi?id=30592
Summary
[Qt] keepWebHistory undefined while executing Layouttests fast/history/clicke...
Chang Shu
Reported
2009-10-20 12:44:28 PDT
The following shows when executing LayoutTests: fast/history/clicked-link-is-visited.html CONSOLE MESSAGE: line 6: TypeError: Result of expression 'layoutTestController.keepWebHistory' [undefined] is not a function.
Attachments
fix patch
(1.77 KB, patch)
2009-10-20 12:57 PDT
,
Chang Shu
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chang Shu
Comment 1
2009-10-20 12:57:52 PDT
Created
attachment 41519
[details]
fix patch Just added dummy implementation as it's implemented only on Mac.
Eric Seidel (no email)
Comment 2
2009-10-21 10:34:32 PDT
Comment on
attachment 41519
[details]
fix patch OK. The ChangeLog should really mention which tests this affects. If you want this auto-committed, you'll need to set cq?
Chang Shu
Comment 3
2009-10-21 10:39:07 PDT
(In reply to
comment #2
)
> (From update of
attachment 41519
[details]
) > OK. The ChangeLog should really mention which tests this affects. If you want > this auto-committed, you'll need to set cq?
Thank you. Just did cq?
WebKit Commit Bot
Comment 4
2009-10-21 12:18:57 PDT
Comment on
attachment 41519
[details]
fix patch Clearing flags on attachment: 41519 Committed
r49915
: <
http://trac.webkit.org/changeset/49915
>
WebKit Commit Bot
Comment 5
2009-10-21 12:19:00 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug