2009-10-21  Shu Chang  <Chang.Shu@nokia.com>

Reviewed by Eric Seidel.

        [Qt] Added dummy implementation for keepWebHistory()
        https://bugs.webkit.org/show_bug.cgi?id=30592

        * DumpRenderTree/qt/LayoutTestControllerQt.cpp:
        (LayoutTestController::keepWebHistory):
        * DumpRenderTree/qt/LayoutTestControllerQt.h:

Canonical link: https://commits.webkit.org/41369@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@49915 268f45cc-cd09-0410-ab3c-d52691b4dbfc